# franky

./: .gitignore  .travis.yml  LICENSE  README.adoc  README.md  build.gradle  gradle.properties  gradlew  settings.gradle
async-profiler/: CMakeLists.txt
async-profiler/src/: profiler.cpp  profiler.h  vmEntry.cpp
franky-agent/: CMakeLists.txt  build.gradle  proto
franky-agent/src/: logging.h  profiler.cpp  profiler.h  vmEntry.cpp  vmEntry.h
franky-intellij/: build.gradle
franky-intellij/src/main/java/me/serce/franky/: Fdfdf.java
franky-intellij/src/main/kotlin/me/serce/franky/: FrankyComponent.kt  JVMAttachService.kt  JVMRemoteService.kt  main.kt  test.kt
franky-intellij/src/main/kotlin/me/serce/franky/jvm/: JVMAttachService.kt  JVMRemoteService.kt
franky-intellij/src/main/kotlin/me/serce/franky/ui/: FrankyToolWindowFactory.kt  concept.kt  jvmTab.kt  jvmsListPanel.kt  profilingResult.kt  swingUtils.kt  toolWindow.kt
franky-intellij/src/main/kotlin/me/serce/franky/ui/flame/: NullPsiMethod.java  NullPsiMethod.kt  flame.kt  flameGraph.kt  flameTree.kt
franky-intellij/src/main/kotlin/me/serce/franky/util/: lifetimes.kt  log.kt  platform.kt  reactive.kt
franky-intellij/src/test/kotlin/me/serce/franky/ui/flame/: FrameComponentTest.kt
franky-intellij/src/test/kotlin/me/serce/franky/util/: LifetimeTest.kt
franky-proto/: build.gradle
franky-proto/src/main/proto/: CMakeLists.txt  addressbook.proto  protocol.proto
gradle/wrapper/: gradle-wrapper.properties
src/main/kotlin/me/serce/franky/: main.kt  test.kt
